--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.4.13",
     "mysql": "^2.18.1",
     "next": "13.4.13",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
