--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.5.2",
+    "react-responsive": "^9.0.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
