--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "@types/node": "20.4.8",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
@@ -22,8 +24,10 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-intersection-observer": "^9.5.2",
     "react-hook-form": "^7.45.4",
+    "react-intersection-observer": "^9.5.2",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
