--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-intersection-observer": "^9.5.2",
