--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "hls.js": "^1.4.12",
     "mysql": "^2.18.1",
     "next": "13.4.13",
     "next-auth": "^4.23.1",
@@ -35,5 +36,8 @@
     "recoil-persist": "^5.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
