--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "hls.js": "^1.4.12",
@@ -26,6 +27,7 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
