--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.45.4",
     "react-intersection-observer": "^9.5.2",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "tailwindcss": "3.3.3",
