--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "socket.io-client": "^4.7.2",
+    "sweetalert2": "^11.7.27",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
