--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "bufferutil": "^4.0.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "hls.js": "^1.4.12",
@@ -26,6 +27,7 @@
     "next": "13.4.13",
     "next-auth": "^4.23.1",
     "plyr": "^3.7.8",
+    "pm2": "^5.3.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -41,7 +43,8 @@
     "socket.io-client": "4.6.2",
     "sweetalert2": "^11.7.27",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2"
