--- a/package.json
+++ b/package.json
@@ -45,7 +45,5 @@
     "typescript": "5.1.6",
     "utf-8-validate": "^6.0.3"
   },
-  "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.2"
-  }
+  "devDependencies": {}
 }
