--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "hls.js": "^1.4.12",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "next": "13.4.13",
     "next-auth": "^4.23.1",
