--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL = "https://api.reptimate.store"
+NEXT_PUBLIC_API_URL = "https://reptimate.store/api"
 NEXT_PUBLIC_S3_URL = "https://reptimate.s3.ap-northeast-2.amazonaws.com/"
 
 NEXT_PUBLIC_CHAT_URL = "https://socket.reptimate.store"
