--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bufferutil": "^4.0.7",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "firebase": "^10.5.0",
     "hls.js": "^1.4.12",
     "mysql": "^2.18.1",
     "next": "13.4.13",
@@ -45,6 +46,5 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "utf-8-validate": "^6.0.3"
-  },
-  "devDependencies": {}
+  }
 }
