--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "recoil-persist": "^5.1.0",
     "socket.io-client": "4.6.2",
     "sweetalert2": "^11.7.27",
+    "swiper": "^11.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "utf-8-validate": "^6.0.3"
